a working application without writing a role through CRUD operations, only directly through editing a table

--- a/src/main/resources/templates/person/users.html
+++ b/src/main/resources/templates/person/users.html
@@ -8,7 +8,7 @@
 <body>
 <div align="center">
     <h2>Users</h2>
-    <form th:method="GET" action="/users/search">
+    <form th:method="GET" action="/admin/users/search">
         <label for="keyword"> Enter user id: </label>
         <input type="number" name="keyword" id="keyword"/>
         <input type="submit" value="Search">
