--- a/src/main/resources/templates/person/edit.html
+++ b/src/main/resources/templates/person/edit.html
@@ -21,9 +21,9 @@
     <br/>
     <label for="password"> Enter your password: </label>
     <input type="text" th:field="*{password}" id="password"/>
-    <br/>
-    <label for="role"> Enter your roles: </label>
-    <input type="number" th:field="*{role_id}" id="role"/>
+<!--    <br/>-->
+<!--    <label for="role"> Enter your roles: </label>-->
+<!--    <input type="number" th:field="*{role_id}" id="role"/>-->
     <br/>
     <br/>
     <input type="submit" value="Update">
