--- a/src/main/resources/templates/person/edit.html
+++ b/src/main/resources/templates/person/edit.html
@@ -8,7 +8,7 @@
 <div align="center">
   <form th:method="PATCH" th:action="@{/admin/users/{id}(id=${person.getId()})}" th:object="${person}">
     <label for="name"> Enter your name: </label>
-    <input type="text" th:field="*{username}" id="name"/>
+    <input type="text" th:field="*{name}" id="name"/>
     <br/>
     <label for="email"> Enter  your e-mail: </label>
     <input type="text" th:field="*{email}" id="email"/>
