--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -2,25 +2,40 @@
 <meta charset="UTF-8" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
 </head>
-<body>
 <div align="center">
-<form name="f" method="post" action="/process_login">
-  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous">
+    </script>
 
-  <label for="username"> Введите ваш email: </label>
-  <input type="text" name="username" id="username">
-  <br/>
-  <label for="password"> Введите пароль: </label>
-  <input type="password" name="password" id="password">
-  <br/>
-  <input type="submit" value="Login"/>
+        <div align="left" class="w-25 p-3">
 
-  <div th:if="${param.error}" style="color: red">
-    Неправильные имя или пароль
-  </div>
-</form>
-</div>
+            <h3>Please sing in</h3>
+
+            <form name="f" method="post" action="/process_login">
+
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
+                <input type="email" class="form-control" name="username" id="username" placeholder="Email address">
+
+                <input type="password" class="form-control "  name="password" id="password" placeholder="Password">
+
+                <input type="submit" class="btn btn-primary w-100 p-2" value="Sing in"/>
+
+                <div th:if="${param.error}" style="color: red">
+                    Неправильные имя или пароль
+                </div>
+
+            </form>
+        </div>
 </body>
+</div>
 </html>
