--- a/src/main/resources/templates/person/user.html
+++ b/src/main/resources/templates/person/user.html
@@ -1,30 +1,84 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml"
+      lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-  <meta charset="UTF-8">
-  <title>Person</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.js"></script>
+  <title>User Page</title>
+
 </head>
 <body>
-<div align="center">
-  <h3>Name:</h3>
-  <p th:text="${person.getUsername}">VALUE<</p>
-  <h3>E-mail:</h3>
-  <p th:text="${person.getEmail()}">VALUE<</p>
-  <h3>Address:</h3>
-  <p th:text="${person.getAddress()}">VALUE<</p>
-  <h3>Age:</h3>
-  <p th:text="${person.getAge()}">VALUE<</p>
+  <div>
+    <nav class="navbar navbar-light bg-dark">
+      <a class="navbar-brand">
+        <div class="container">
+          <div class="row">
+            <div th:object="${person}" class="col-sm text-light bg-dark">
+              <b th:text="${person.getEmail()}">user</b>
+              <span>with roles:</span>
+              <span th:text="${person.toStringRoles()}">role</span>
+            </div>
 
-<!--  <h4><a th:href="@{/users/{id}/edit(id=${user.getId()})}">Edit</a></h4>-->
-<!--  <form th:method="DELETE" th:action="@{/users/{id}(id=${user.getId()})}" \>-->
-<!--    <input type="submit" value="Delete">-->
-<!--  </form>-->
+          </div>
+        </div>
+      </a>
+      <div class="col-sm-20">
+        <form th:method="POST" th:action="@{/logout}">
+          <button class="btn text-secondary type=submit">Logout</button>
+        </form>
+      </div>
+    </nav>
+  </div>
 
-  <h3><a th:href="@{/admin}">Return to main page</a></h3>
+  <div class="row mt-3">
+    <div class="col-2 mt-3">
+      <div class="list-group" id="list-tab" role="tablist">
+        <a class="list-group-item list-group-item-action active " id="list-home-list" data-toggle="list"
+           th:href="@{/user}" role="tab" aria-controls="home">User</a>
+      </div>
+    </div>
+    <div class="col-9 ">
+      <p><h1>User information-page</h1></p>
 
-  <form th:action="@{/logout}" th:method="POST">
-    <input type="submit" value="Logout"/>
-  </form>
-</div>
+      <div class="container-fluid border">
+        <p><h4>About User</h4></p>
+      </div>
+      <div class="container-fluid border">
+        <table class="table table-striped border-top mt-3">
+          <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Address</th>
+            <th scope="col">Age</th>
+            <th scope="col">Role</th>
+          </tr>
+          </thead>
+          <tbody>
+          <div th:object="${person}">
+            <tr>
+              <td th:utext="${person.getId()}">ID</td>
+              <td th:utext="${person.getName()}">Name</td>
+              <td th:utext="${person.getEmail()}">Email</td>
+              <td th:utext="${person.getAddress()}">Address</td>
+              <td th:utext="${person.getAge()}">Age</td>
+              <td th:utext="${person.toStringRoles()}">Roles</td>
+            </tr>
+          </div>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 </html>
